@@ -5,8 +5,8 @@ import com.flabedu.small.small.model.enums.GenderEnum;
 import com.flabedu.small.small.model.enums.SizeEnum;
 import com.flabedu.small.small.service.ItemService;
 import com.flabedu.small.small.web.controller.ItemController;
-import com.flabedu.small.small.web.dto.ItemDTO;
-import com.flabedu.small.small.web.dto.ItemDetailDTO;
+import com.flabedu.small.small.web.dto.request.ItemRequestDTO;
+import com.flabedu.small.small.web.dto.request.ItemDetailRequestDTO;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -15,11 +15,10 @@ import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.ResultActions;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
@@ -37,23 +36,23 @@ public class ItemControllerTest {
     @MockBean
     private ItemService itemService;
 
-    private ItemDetailDTO itemDetail;
-    private ItemDTO item;
+    private ItemDetailRequestDTO itemDetail;
+    private ItemRequestDTO item;
 
     @BeforeEach
     void setUp() {
-        itemDetail = ItemDetailDTO.builder()
+        itemDetail = ItemDetailRequestDTO.builder()
                 .size(SizeEnum.M).stock(100l).build();
 
-        item = ItemDTO.builder()
+        item = ItemRequestDTO.builder()
                 .itemName("테스트 아이템")
                 .itemNameEn("test item")
                 .category(1l)
                 .subCategory(3l)
                 .gender(GenderEnum.C)
                 .price(new BigDecimal(20000))
-                .itemImages(Arrays.asList("img1.png","img2.png"))
-                .itemDetails(Arrays.asList(itemDetail))
+                .itemImages(List.of("img1.png", "img2.png"))
+                .itemDetails(List.of(itemDetail))
                 .build();
     }
 
@@ -72,9 +71,16 @@ public class ItemControllerTest {
     }
 
     @Test
-    @DisplayName("not null 필드에 값이 전송되지 않아 상품 등록을 실패할 경우 모든 에러메세지가 응답 바디에 포함된다.")
-    public void addItemNotNullFieldIsNull() throws Exception {
-        ItemDTO inValidItemDTO = ItemDTO.builder()
+    @DisplayName("상품 등록 실패 - 상품명 null")
+    public void addItemFailItemNameIsNull() throws Exception {
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
+                .itemNameEn("test item")
+                .category(1l)
+                .subCategory(3l)
+                .gender(GenderEnum.C)
+                .price(new BigDecimal(20000))
+                .itemImages(List.of("img1.png","img2.png"))
+                .itemDetails(List.of(itemDetail))
                 .build();
 
         String content = objectMapper.writeValueAsString(inValidItemDTO);
@@ -83,30 +89,174 @@ public class ItemControllerTest {
                 post("/items")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(content)
-                ).andExpectAll(
-                        status().isInternalServerError(),
-                        jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","상품명을 입력해주세요.").exists(),
-                        jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","성별을 선택해주세요.").exists(),
-                        jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","가격을 입력해주세요.").exists(),
-                        jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","카테고리를 선택해주세요.").exists(),
-                        jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","소카테고리를 선택해주세요.").exists(),
-                        jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","상품의 이미지는 최소 1개 이상 등록해주세요.").exists(),
-                        jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","상품 사이즈 및 재고를 최소 1개 이상 입력해주세요.").exists()
-                    ).andDo(print());
+        ).andExpectAll(
+                status().isInternalServerError(),
+                jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","상품명을 입력해주세요.").exists()
+        ).andDo(print());
     }
 
     @Test
-    @DisplayName("상품 영문명에 한글이 포함되어 상품 등록을 실패할 경우 에러메세지가 응답 바디에 포함된다.")
+    @DisplayName("상품 등록 실패 - 카테고리 null")
+    public void addItemFailCategoryIsNull() throws Exception {
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
+                .itemName("테스트 아이템")
+                .itemNameEn("test item")
+                .subCategory(3l)
+                .gender(GenderEnum.C)
+                .price(new BigDecimal(20000))
+                .itemImages(List.of("img1.png","img2.png"))
+                .itemDetails(List.of(itemDetail))
+                .build();
+
+        String content = objectMapper.writeValueAsString(inValidItemDTO);
+
+        this.mockMvc.perform(
+                post("/items")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(content)
+        ).andExpectAll(
+                status().isInternalServerError(),
+                jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","카테고리를 선택해주세요.").exists()
+        ).andDo(print());
+    }
+
+    @Test
+    @DisplayName("상품 등록 실패 - 소카테고리 null")
+    public void addItemFailSubCategoryIsNull() throws Exception {
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
+                .itemName("테스트 아이템")
+                .itemNameEn("test item")
+                .category(1l)
+                .gender(GenderEnum.C)
+                .price(new BigDecimal(20000))
+                .itemImages(List.of("img1.png","img2.png"))
+                .itemDetails(List.of(itemDetail))
+                .build();
+
+        String content = objectMapper.writeValueAsString(inValidItemDTO);
+
+        this.mockMvc.perform(
+                post("/items")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(content)
+        ).andExpectAll(
+                status().isInternalServerError(),
+                jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","소카테고리를 선택해주세요.").exists()
+        ).andDo(print());
+    }
+
+    @Test
+    @DisplayName("상품 등록 실패 - 성별 null")
+    public void addItemFailGenderIsNull() throws Exception {
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
+                .itemName("테스트 아이템")
+                .itemNameEn("test item")
+                .category(1l)
+                .subCategory(1l)
+                .price(new BigDecimal(20000))
+                .itemImages(List.of("img1.png","img2.png"))
+                .itemDetails(List.of(itemDetail))
+                .build();
+
+        String content = objectMapper.writeValueAsString(inValidItemDTO);
+
+        this.mockMvc.perform(
+                post("/items")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(content)
+        ).andExpectAll(
+                status().isInternalServerError(),
+                jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","성별을 선택해주세요.").exists()
+        ).andDo(print());
+    }
+
+    @Test
+    @DisplayName("상품 등록 실패 - 가격 null")
+    public void addItemFailPriceIsNull() throws Exception {
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
+                .itemName("테스트 아이템")
+                .itemNameEn("test item")
+                .category(1l)
+                .subCategory(1l)
+                .gender(GenderEnum.C)
+                .itemImages(List.of("img1.png","img2.png"))
+                .itemDetails(List.of(itemDetail))
+                .build();
+
+        String content = objectMapper.writeValueAsString(inValidItemDTO);
+
+        this.mockMvc.perform(
+                post("/items")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(content)
+        ).andExpectAll(
+                status().isInternalServerError(),
+                jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","가격을 입력해주세요.").exists()
+        ).andDo(print());
+    }
+
+    @Test
+    @DisplayName("상품 등록 실패 - 상품이미지 null")
+    public void addItemFailItemImagesIsNull() throws Exception {
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
+                .itemName("테스트 아이템")
+                .itemNameEn("test item")
+                .category(1l)
+                .subCategory(1l)
+                .gender(GenderEnum.C)
+                .price(new BigDecimal(20000))
+                .itemDetails(List.of(itemDetail))
+                .build();
+
+        String content = objectMapper.writeValueAsString(inValidItemDTO);
+
+        this.mockMvc.perform(
+                post("/items")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(content)
+        ).andExpectAll(
+                status().isInternalServerError(),
+                jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","상품의 이미지는 최소 1개 이상 등록해주세요.").exists()
+        ).andDo(print());
+    }
+
+    @Test
+    @DisplayName("상품 등록 실패 - 상품 상세 정보 null")
+    public void addItemFailItemDetailsIsNull() throws Exception {
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
+                .itemName("테스트 아이템")
+                .itemNameEn("test item")
+                .category(1l)
+                .subCategory(1l)
+                .gender(GenderEnum.C)
+                .price(new BigDecimal(20000))
+                .itemImages(List.of("img1.png","img2.png"))
+                .build();
+
+        String content = objectMapper.writeValueAsString(inValidItemDTO);
+
+        this.mockMvc.perform(
+                post("/items")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(content)
+        ).andExpectAll(
+                status().isInternalServerError(),
+                jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","상품 사이즈 및 재고를 최소 1개 이상 입력해주세요.").exists()
+        ).andDo(print());
+    }
+
+    @Test
+    @DisplayName("상품 등록 실패 - 상품영문명에 한글 포함")
     public void addItemItemNameEnContainsKorean() throws Exception {
-        ItemDTO inValidItemDTO = ItemDTO.builder()
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
                 .itemName("테스트 아이템")
                 .itemNameEn("test item마")
                 .category(1l)
                 .subCategory(3l)
                 .gender(GenderEnum.C)
                 .price(new BigDecimal(20000))
-                .itemImages(Arrays.asList("img1.png","img2.png"))
-                .itemDetails(Arrays.asList(itemDetail))
+                .itemImages(List.of("img1.png","img2.png"))
+                .itemDetails(List.of(itemDetail))
                 .build();
 
         String content = objectMapper.writeValueAsString(inValidItemDTO);
@@ -122,17 +272,17 @@ public class ItemControllerTest {
     }
 
     @Test
-    @DisplayName("가격을 음수로 입력하여 상품 등록을 실패할 경우 에러메세지가 응답 바디에 포함된다.")
+    @DisplayName("상품 등록 실패 - 가격에 음수 입력")
     public void addItemPriceIsNegative() throws Exception {
-        ItemDTO inValidItemDTO = ItemDTO.builder()
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
                 .itemName("테스트 아이템")
                 .itemNameEn("test item")
                 .category(1l)
                 .subCategory(3l)
                 .gender(GenderEnum.C)
                 .price(new BigDecimal(-30000))
-                .itemImages(Arrays.asList("img1.png","img2.png"))
-                .itemDetails(Arrays.asList(itemDetail))
+                .itemImages(List.of("img1.png","img2.png"))
+                .itemDetails(List.of(itemDetail))
                 .build();
 
         String content = objectMapper.writeValueAsString(inValidItemDTO);
@@ -148,18 +298,18 @@ public class ItemControllerTest {
     }
 
     @Test
-    @DisplayName("상품이미지를 10개 이상 등록하여 상품 등록을 실패할 경우 에러메세지가 응답 바디에 포함된다.")
+    @DisplayName("상품 등록 실패 - 상품 이미지 10개 이상 등록")
     public void addItemItemImagesCountOverflow() throws Exception {
-        ItemDTO inValidItemDTO = ItemDTO.builder()
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
                 .itemName("테스트 아이템")
                 .itemNameEn("test item")
                 .category(1l)
                 .subCategory(3l)
                 .gender(GenderEnum.C)
                 .price(new BigDecimal(20000))
-                .itemImages(Arrays.asList("img1.png","img2.png","img3.png","img4.png","img5.png",
+                .itemImages(List.of("img1.png","img2.png","img3.png","img4.png","img5.png",
                         "img6.png","img7.png","img8.png","img9.png","img10.png"))
-                .itemDetails(Arrays.asList(itemDetail))
+                .itemDetails(List.of(itemDetail))
                 .build();
 
         String content = objectMapper.writeValueAsString(inValidItemDTO);
@@ -175,22 +325,20 @@ public class ItemControllerTest {
     }
 
     @Test
-    @DisplayName("상품 상세 정보의 재고수량을 입력하지 않거나 음수를 입력하여 상품 등록을 실패할 경우 에러메세지가 응답 바디에 포함된다.")
-    public void addItemItemDetailIsNullOrNegative() throws Exception {
-        ItemDetailDTO itemDetail1 = ItemDetailDTO.builder()
-                .size(SizeEnum.S).stock(-30l).build();
-        ItemDetailDTO itemDetail2 = ItemDetailDTO.builder()
+    @DisplayName("상품 등록 실패 - 상품 상세 정보의 재고수량 null")
+    public void addItemItemDetailIsNull() throws Exception {
+        ItemDetailRequestDTO itemDetail1 =  ItemDetailRequestDTO.builder()
                 .size(SizeEnum.M).build();
 
-        ItemDTO inValidItemDTO = ItemDTO.builder()
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
                 .itemName("테스트 아이템")
                 .itemNameEn("test item")
                 .category(1l)
                 .subCategory(3l)
                 .gender(GenderEnum.C)
                 .price(new BigDecimal(20000))
-                .itemImages(Arrays.asList("img1.png","img2.png"))
-                .itemDetails(Arrays.asList(itemDetail1,itemDetail2))
+                .itemImages(List.of("img1.png","img2.png"))
+                .itemDetails(List.of(itemDetail1))
                 .build();
 
         String content = objectMapper.writeValueAsString(inValidItemDTO);
@@ -201,9 +349,36 @@ public class ItemControllerTest {
                         .content(content)
         ).andExpectAll(
                 status().isInternalServerError(),
-                jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","사이즈 별 재고수량은 0 이상의 정수만 입력 가능합니다.").exists(),
                 jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","사이즈 별 재고수량을 입력해주세요.").exists()
         ).andDo(print());
     }
 
+    @Test
+    @DisplayName("상품 등록 실패 - 상품 상세 정보의 재고수량에 음수 입력")
+    public void addItemItemDetailIsNegative() throws Exception {
+        ItemDetailRequestDTO itemDetail1 = ItemDetailRequestDTO.builder()
+                .size(SizeEnum.S).stock(-30l).build();
+
+        ItemRequestDTO inValidItemDTO = ItemRequestDTO.builder()
+                .itemName("테스트 아이템")
+                .itemNameEn("test item")
+                .category(1l)
+                .subCategory(3l)
+                .gender(GenderEnum.C)
+                .price(new BigDecimal(20000))
+                .itemImages(List.of("img1.png","img2.png"))
+                .itemDetails(List.of(itemDetail1))
+                .build();
+
+        String content = objectMapper.writeValueAsString(inValidItemDTO);
+
+        this.mockMvc.perform(
+                post("/items")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(content)
+        ).andExpectAll(
+                status().isInternalServerError(),
+                jsonPath("$..error[?(@.fieldErrorMessages == '%s')]","사이즈 별 재고수량은 0 이상의 정수만 입력 가능합니다.").exists()
+        ).andDo(print());
+    }
 }
