@@ -1,13 +1,11 @@
 package com.flabedu.small.small.service;
 
-import com.flabedu.small.small.exception.CustomErrorCode;
-import com.flabedu.small.small.exception.CustomException;
 import com.flabedu.small.small.model.enums.GenderEnum;
 import com.flabedu.small.small.model.Item;
 import com.flabedu.small.small.model.enums.SizeEnum;
 import com.flabedu.small.small.repository.ItemRepository;
-import com.flabedu.small.small.web.dto.ItemDTO;
-import com.flabedu.small.small.web.dto.ItemDetailDTO;
+import com.flabedu.small.small.web.dto.request.ItemRequestDTO;
+import com.flabedu.small.small.web.dto.request.ItemDetailRequestDTO;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -18,6 +16,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.*;
@@ -32,29 +31,29 @@ public class ItemServiceTest {
     @InjectMocks
     private ItemService itemService;
 
-    private ItemDetailDTO itemDetail;
-    private ItemDTO item;
+    private ItemDetailRequestDTO itemDetailDTO;
+    private ItemRequestDTO itemDTO;
 
     @BeforeEach
     void setUp() {
-        itemDetail = ItemDetailDTO.builder()
+        itemDetailDTO = ItemDetailRequestDTO.builder()
                 .size(SizeEnum.M).stock(100l).build();
 
-        item = ItemDTO.builder()
+        itemDTO = ItemRequestDTO.builder()
                 .itemName("test1")
                 .itemNameEn(null)
                 .subCategory(3l)
                 .gender(GenderEnum.C)
                 .price(new BigDecimal(20000))
                 .itemImages(Arrays.asList("img1.png","img2.png"))
-                .itemDetails(Arrays.asList(itemDetail))
+                .itemDetails(List.of(itemDetailDTO))
                 .build();
     }
 
     @Test
     @DisplayName("상품 등록 시 필요한 메소드가 모두 호출된다.")
-    public void addItemTest(){
-        itemService.addItem(item);
+    public void addItemSuccess(){
+        itemService.addItem(itemDTO);
 
         verify(itemRepository).addItem(any(Item.class));
         verify(itemRepository).addItemCategory(any(Item.class));
